--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -15,61 +15,113 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@mipmap/ic_launcher_money_manager_round" />
 
     <TextView
         android:id="@+id/tv_availableBudget"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="139dp"
-        android:layout_marginTop="69dp"
-        android:layout_marginEnd="137dp"
-        android:layout_marginBottom="20dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="140dp"
+        android:layout_marginTop="308dp"
+        android:layout_marginEnd="136dp"
+        android:layout_marginBottom="10dp"
         android:text="@string/available_budget"
+        android:textColor="#fff"
+        android:textSize="18dp"
         android:visibility="invisible"
-        app:layout_constraintBottom_toTopOf="@+id/tv_totalSpent"
+        app:layout_constraintBottom_toTopOf="@+id/tv_availableBudgetData"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.75"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_Splash" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/tv_totalSpent"
+        android:id="@+id/tv_availableBudgetData"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:layout_marginStart="153dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginEnd="152dp"
-        android:text="@string/total_spend"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="188dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="188dp"
+        android:text="0"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_availableBudget" />
 
     <TextView
-        android:id="@+id/tv_balance"
+        android:id="@+id/tv_totalSpent"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginStart="166dp"
-        android:layout_marginTop="19dp"
-        android:layout_marginEnd="165dp"
-        android:text="@string/balance"
+        android:layout_marginStart="151dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="150dp"
+        android:text="@string/total_spend"
+        android:textColor="#fff"
+        android:textSize="18dp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_availableBudgetData" />
+
+    <TextView
+        android:id="@+id/tv_totalSpentData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="188dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="188dp"
+        android:text="0"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_totalSpent" />
 
-    <Button
-        android:id="@+id/btn_start"
+    <TextView
+        android:id="@+id/tv_balance"
         android:layout_width="wrap_content"
         android:layout_height="0dp"
-        android:layout_marginStart="148dp"
-        android:layout_marginTop="41dp"
-        android:layout_marginEnd="148dp"
-        android:text="@string/start"
+        android:layout_marginStart="165dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="164dp"
+        android:text="@string/balance"
+        android:textColor="#fff"
+        android:textSize="18dp"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_totalSpentData" />
+
+    <TextView
+        android:id="@+id/tv_balanceData"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="188dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="188dp"
+        android:text="0"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_balance" />
+
+    <Button
+        android:id="@+id/btn_start"
+        android:background="@drawable/button"
+        android:layout_width="231dp"
+        android:layout_height="49dp"
+        android:layout_marginStart="148dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="148dp"
+        android:layout_marginBottom="24dp"
+        android:padding="15dp"
+        android:text="@string/record"
+        android:textSize="18dp"
+        android:textColor="#fff"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tv_balanceData" />
 
 
 </android.support.constraint.ConstraintLayout>
