--- a/app/src/main/res/drawable/splash_gradient.xml
+++ b/app/src/main/res/drawable/splash_gradient.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <gradient
         android:angle="45"
-        android:endColor="#87CEEB"
-        android:startColor="#768087"
+        android:endColor="#330867"
+        android:startColor="#30cfd0"
         android:type="linear" />
 </shape>
