--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -43,6 +43,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="188dp"
         android:text="0"
+        android:textSize="16dp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -71,6 +72,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="188dp"
         android:text="0"
+        android:textSize="16dp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -99,6 +101,7 @@
         android:layout_marginTop="10dp"
         android:layout_marginEnd="188dp"
         android:text="0"
+        android:textSize="16dp"
         android:visibility="invisible"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -116,7 +119,7 @@
         android:padding="15dp"
         android:text="@string/record"
         android:textSize="18dp"
-        android:textColor="#fff"
+        android:textColor="#0820FF"
         android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
