--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -19,16 +18,87 @@
         android:id="@+id/tv_titleIncome"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="91dp" />
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="25dp"
+        android:text="@string/title_income"
+        android:textColor="#000"
+        android:textSize="18dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/chart_overview" />
 
     <TextView
         android:id="@+id/tv_titleExpenses"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        tools:layout_editor_absoluteX="221dp"
-        tools:layout_editor_absoluteY="91dp" />
+        android:layout_marginTop="25dp"
+        android:layout_marginEnd="54dp"
+        android:text="@string/title_expenses"
+        android:textColor="#000"
+        android:textSize="18dp"
+        app:layout_constraintEnd_toEndOf="@+id/chart_overview"
+        app:layout_constraintTop_toBottomOf="@+id/chart_overview" />
+
+    <TextView
+        android:id="@+id/tv_incomeAmount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="13dp"
+        android:layout_marginTop="9dp"
+        android:textSize="16dp"
+        app:layout_constraintStart_toStartOf="@+id/tv_titleIncome"
+        app:layout_constraintTop_toBottomOf="@+id/tv_titleIncome"
+        tools:text="0.00" />
+
+    <TextView
+        android:id="@+id/tv_expensesAmount"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="9dp"
+        android:layout_marginEnd="22dp"
+        android:textSize="16dp"
+        app:layout_constraintEnd_toEndOf="@+id/tv_titleExpenses"
+        app:layout_constraintTop_toBottomOf="@+id/tv_titleExpenses"
+        tools:text="0.00" />
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="194dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="172dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+    </android.support.v7.widget.RecyclerView>
+
+    <Button
+        android:id="@+id/btn_income"
+        android:layout_width="83dp"
+        android:layout_height="68dp"
+        android:layout_marginStart="66dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginBottom="35dp"
+        android:background="@drawable/ic_action_income"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
+
+    <Button
+        android:id="@+id/btn_expenses"
+        android:layout_width="83dp"
+        android:layout_height="68dp"
+        android:layout_marginStart="86dp"
+        android:layout_marginTop="42dp"
+        android:layout_marginEnd="66dp"
+        android:layout_marginBottom="35dp"
+        android:background="@drawable/ic_action_expenses"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btn_income"
+        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />
+
 
 </android.support.constraint.ConstraintLayout>
