--- a/app/src/main/res/layout/fragment_income.xml
+++ b/app/src/main/res/layout/fragment_income.xml
@@ -49,7 +49,7 @@
         app:layout_constraintBottom_toTopOf="@+id/tv_chooseCategory"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/textView"
-        app:layout_constraintTop_toBottomOf="@+id/income_date" />
+        app:layout_constraintTop_toBottomOf="@+id/income_date" tools:targetApi="o"/>
 
     <TextView
         android:id="@+id/tv_chooseCategory"
@@ -94,6 +94,6 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.498" />
+        app:layout_constraintVertical_bias="0.498" tools:targetApi="o"/>
 
 </android.support.constraint.ConstraintLayout>
