--- a/app/src/main/res/layout/fragment_overview.xml
+++ b/app/src/main/res/layout/fragment_overview.xml
@@ -15,7 +15,7 @@
         android:layout_marginEnd="59dp"
         android:text="@string/title_income"
         android:textColor="#000"
-        android:textSize="18dp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/tv_incomeAmount"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,7 +27,7 @@
         android:layout_marginTop="16dp"
         android:text="@string/title_expenses"
         android:textColor="#000"
-        android:textSize="18dp"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="@+id/tv_expensesAmount"
         app:layout_constraintStart_toStartOf="@+id/tv_expensesAmount"
         app:layout_constraintTop_toTopOf="parent" />
@@ -67,7 +67,7 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="21dp"
         android:textAlignment="center"
-        android:textSize="16dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toStartOf="@+id/tv_expensesAmount"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/tv_titleIncome"
@@ -80,14 +80,14 @@
         android:layout_marginTop="8dp"
         android:layout_marginEnd="15dp"
         android:textAlignment="center"
-        android:textSize="16dp"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/tv_incomeAmount"
         app:layout_constraintTop_toBottomOf="@+id/tv_titleExpenses"
         tools:text="0.00" />
 
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/recyclerView"
+        android:id="@+id/overview_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginStart="9dp"
@@ -131,9 +131,9 @@
         android:layout_marginBottom="2dp"
         android:text="@string/break_down"
         android:textColor="#000"
-        android:textSize="16dp"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
-        app:layout_constraintStart_toStartOf="@+id/recyclerView" />
+        android:textSize="16sp"
+        app:layout_constraintBottom_toTopOf="@+id/overview_recycler_view"
+        app:layout_constraintStart_toStartOf="@+id/overview_recycler_view" />
 
 
 </android.support.constraint.ConstraintLayout>
