--- a/app/src/main/res/menu/fragment_delete.xml
+++ b/app/src/main/res/menu/fragment_delete.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
-        android:id="@+id/delete_category"
+        android:id="@+id/delete_item"
         android:icon="@drawable/ic_menu_delete"
         android:title="@string/delete_category"
         app:showAsAction="ifRoom|withText">
