--- a/app/src/main/res/layout/list_item_income.xml
+++ b/app/src/main/res/layout/list_item_income.xml
@@ -7,6 +7,8 @@
     android:layout_height="wrap_content">
 
     <TextView
+        android:textSize="16sp"
+        android:textColor="#000"
         android:id="@+id/incomeCategory"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
@@ -17,6 +19,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:textSize="18sp"
+        android:textColor="#000"
         android:id="@+id/incomeAmount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -27,6 +31,8 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
+        android:textSize="14sp"
+        android:textColor="#000"
         android:id="@+id/incomeDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
