--- a/app/src/main/res/layout/list_item_expenses.xml
+++ b/app/src/main/res/layout/list_item_expenses.xml
@@ -7,38 +7,38 @@
     android:layout_height="wrap_content">
 
     <TextView
-        android:textSize="16sp"
-        android:textColor="#000"
         android:id="@+id/expensesCategory"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="Income Category"
+        android:text="ExpensesCategory"
+        android:textColor="#000"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:textSize="18sp"
-        android:textColor="#000"
-        android:id="@+id/incomeAmount"
+        android:id="@+id/expensesAmount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="30dp"
         android:layout_marginEnd="23dp"
-        android:text="Income Amount"
+        android:text="Expenses Amount"
+        android:textColor="#000"
+        android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:textSize="14sp"
-        android:textColor="#000"
-        android:id="@+id/incomeDate"
+        android:id="@+id/expensesDate"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="Income Date"
+        android:text="ExpensesDate"
+        android:textColor="#000"
+        android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/expensesCategory" />
 </android.support.constraint.ConstraintLayout>
