--- a/app/src/main/res/layout/list_item_expenses.xml
+++ b/app/src/main/res/layout/list_item_expenses.xml
@@ -1,44 +1,56 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    tools:layout_editor_absoluteY="81dp">
 
     <TextView
-        android:id="@+id/expensesCategory"
+        android:id="@+id/expense_category"
         android:layout_width="wrap_content"
         android:layout_height="19dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:text="ExpensesCategory"
+        android:text="ExpenseCategory"
         android:textColor="#000"
         android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/expensesAmount"
+        android:id="@+id/expense_amount"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
-        android:layout_marginEnd="23dp"
-        android:text="Expenses Amount"
+        android:layout_marginTop="21dp"
+        android:layout_marginEnd="7dp"
+        android:text="Expense Amount"
         android:textColor="#000"
         android:textSize="18sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/expensesDate"
+        android:id="@+id/expense_date"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
-        android:text="ExpensesDate"
+        android:text="ExpenseDate"
         android:textColor="#000"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/expensesCategory" />
+        app:layout_constraintTop_toBottomOf="@+id/expense_category" />
+
+    <TextView
+        android:id="@+id/expense_time"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:text="ExpensesTime"
+        android:textColor="#000"
+        android:textSize="14sp"
+        app:layout_constraintStart_toEndOf="@+id/expense_date"
+        app:layout_constraintTop_toBottomOf="@+id/expense_category" />
 </android.support.constraint.ConstraintLayout>
