--- a/app/src/main/res/layout/list_item_income.xml
+++ b/app/src/main/res/layout/list_item_income.xml
@@ -40,5 +40,5 @@
         android:layout_marginTop="8dp"
         android:text="Income Date"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/expensesCategory" />
+        app:layout_constraintTop_toBottomOf="@+id/expense_category" />
 </android.support.constraint.ConstraintLayout>
